Fix schedule overflow

--- a/client/src/Schedule.module.css
+++ b/client/src/Schedule.module.css
@@ -1,10 +1,13 @@
 .fieldset {
 	display: block;
+	height: 50%;
 }
 
 .fieldset ul {
 	list-style: none;
 	padding: 0;
+	overflow: scroll;
+	height: 80%;
 }
 
 
